Note: this log is only for work done since the conversion for 1.x

Version 1.4.2 -- 20 August 2007
----------------------------------------------------------------
16 August 2007
+ Applied resize patch supplied by Verdon Vaillancourt

Version 1.4.1 -- 25 July 2007
----------------------------------------------------------------
23 July 2007
+ RFE #1757050 - Added resizing code from Verdon


Version 1.4.0
----------------------------------------------------------------
19 April 2007
+ Changed functional call to conform with new File Cabinet

5 April 2007
+ Added German translation
+ Updated language functions

5 March 2007
+ Changed control panel icon

Version 1.3.4
-----------------------------------------------------------------
17 February 2007
+ Added translate function

12 January 2007
+ Linked the Album image

Version 1.3.3
-----------------------------------------------------------------
15 November 2006
+ changed pager to use album ids and not photo id. big bug

26 October 2006
+ Fixed pager listing all photos together regardless of album
+ Fixed prefix error message

Version 1.3.2
-----------------------------------------------------------------
19 October 2006
+ Fixed call to $GLOBALS['core']

Version 1.2.9
-----------------------------------------------------------------
5 October 2006
+ Fixed bug 1571221. Call for non-existant function