@@ -23,7 +23,7 @@ define('PHOTOALBUM_MAX_HEIGHT', 800);
 /* auto-resize originals, true or false */
 define("PHOTOALBUM_RS", TRUE);
 /* max width/height of resized originals */
-define("PHOTOALBUM_RS_WIDTH", 500);
-define("PHOTOALBUM_RS_HEIGHT", 500);
+define("PHOTOALBUM_RS_WIDTH", 1280);
+define("PHOTOALBUM_RS_HEIGHT", 1280);
 
 ?>
